# qupsy

./: .gitignore  LICENSE  README.md  pyproject.toml  qpsynth.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
benchmarks/: ghz.json
qupsy/: bin.py  language.py  parser.py  search.py  spec.py  test_spec.py  transition.py  utils.py  verify.py  worklist.py
synthesizer/: language.py  prune.py  search.py  setup.py  transition.py  worklist.py
tests/: test_language.py  test_parser.py  test_qupsy.py  test_search.py  test_spec.py  test_transition.py  test_verify.py  test_worklist.py
tests/data/: ghz.json
